Build env vars, secrets sections. 1st draft of writing tests?

--- a/docs/alkiln/intro.mdx
+++ b/docs/alkiln/intro.mdx
@@ -129,8 +129,16 @@ If we want people to file different issues for different repos (which I think is
 - ALKiln in the Playground
 - Setup
 - Edit ALKiln documentation
- -->
+-->
 
----
+
+## ALKiln docs collaborators {#doc-collaborators}
+
+Both humans and LLMs have contributed to this documentation.
+
+Regarding the former, we asked for feedback, ideas, and technical audits from staff at SuffolkLITLab, [Recurse Center](https://www.recurse.com/) collaborators, friends, family, and of course you, our users.
+
+As for the latter, we sometimes used the free version of [phind](https://www.phind.com) to offer better (and often worse) suggestions for re-wording and phrasing.
+
 
 [^1]: There are some interview features ALKiln cannot yet handle. For example, [`object_multiselect` fields](https://docassemble.org/docs/fields.html#object_multiselect). ALKiln also may not understand complex [`CustomDatatype`](https://docassemble.org/docs/fields.html#custom%20datatype) fields if you make them. If you run into problems, [file a clear and descriptive issue on our repository](https://github.com/SuffolkLITLab/ALKiln/issues) and we will see if we can help.
