--- a/docs/alkiln/troubleshooting.mdx
+++ b/docs/alkiln/troubleshooting.mdx
@@ -388,6 +388,14 @@ Different versions of ALKiln framework (check ALKILN_TAG_EXPRESSion)
 Different versions of ALKiln actions (check `uses`)
 -->
 
+## Slow tests {#slow}
+
+WIP
+
+One reason for slow <GTOYS/> tests are server reloads.
+
+This is different than infinite tests.
+
 <!--
 Slow tests
 
