--- a/docs/alkiln/security.mdx
+++ b/docs/alkiln/security.mdx
@@ -163,7 +163,7 @@ First and foremost, avoid installing or running <GTOYS/> and <AutoDIY/> tests on
 
 A separate server is only one part of separating production and testing sever access, though. You also need to:
 
-- Keep the production server's urls out of ALKiln test files, [workflow files](writing_tests.mdx#workflows), and [environment variables](#writing_tests.mdx#env-vars).
+- Keep the production server's urls out of ALKiln test files, [workflow files](writing_tests.mdx#workflows), and [environment variables](writing_tests.mdx#env-vars).
 - Never share API keys or passwords between servers.
 - Never share real data or databases between servers, whether the data is current or [old](https://www.wired.com/2015/11/samy-kamkar-10-dollar-tool-can-guess-and-steal-your-next-credit-card-number/).
 
